[package]
name = "heade-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
tokio = { version = "1.12.2", features = ["full"] }
tui = "0.19"
crossterm = "0.25.0"
unicode-width = "0.1.10"
futures = "0.3.24"
serde_json = "1.0.86"
regex = "1.6.0"
memchr = "2.3.4"

[lib]
name = "jsonxf"
path = "src/jsonxf.rs"
